<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>us.deathmarine</groupId>
    <artifactId>luyten</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.resources.sournceEncoding>UTF-8</project.resources.sournceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

        <java.vendor>Oracle</java.vendor>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.fifesoft</groupId>
            <artifactId>rsyntaxtextarea</artifactId>
            <version>3.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.mstrobel</groupId>
            <artifactId>procyon-core</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.mstrobel</groupId>
            <artifactId>procyon-expressions</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.mstrobel</groupId>
            <artifactId>procyon-reflection</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.mstrobel</groupId>
            <artifactId>procyon-compilertools</artifactId>
            <version>0.6.0</version>
        </dependency>
        <!--
        <dependency>
            <groupId>org.bitbucket.mstrobel</groupId>
            <artifactId>procyon</artifactId>
            <version>0.5.27</version>
        </dependency>
        -->
    </dependencies>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <finalName>${project.artifactId}-${project.version}-lib</finalName>
        <resources>
            <resource>
                <directory>src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>target</directory>
                <excludes>
                    <exclude>**/*.*</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.desktop/com.apple.eawt=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>AppleJavaExtensions/com.apple.eawt=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-${project.version}</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${project.groupId}.${project.artifactId}.Luyten</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.0,)</version>
                                </requireMavenVersion>
                                <!--<requireJavaVersion>
                                    <version>[${java.version},)</version>
                                </requireJavaVersion>-->
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.17.1</version>
                <configuration>
                    <ignoredVersions>.*-M.*,.*alpha.*,.*Alpha.*,.*RC.*,.*CR.*,.*rc.*,.*-beta.*,.*Beta.*,.*20041127.091804.*</ignoredVersions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>${java.vendor}</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <!--This plugin does nothing in maven, it is only to appease Eclipse and remove red squigglys.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            org.apache.maven.plugins
                                        </groupId>
                                        <artifactId>
                                            maven-install-plugin
                                        </artifactId>
                                        <versionRange>
                                            [2.4,)
                                        </versionRange>
                                        <goals>
                                            <goal>install-file</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            com.googlecode.maven-download-plugin
                                        </groupId>
                                        <artifactId>
                                            download-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [1.3.0,)
                                        </versionRange>
                                        <goals>
                                            <goal>wget</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>
</project>
